<resources>
    <string name="app_name">Share Recipe Book</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="Favorites">Favorites</string>
    <string name="my_recipes">My recipes</string>
    <string name="recipes_title">Recipes Title</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="ingredients">ingredients</string>
    <string name="preparation">preparation</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="my_favorites">My favorites</string>
    <string name="My_recipes">My recipes</string>
    <string name="login_instructions">Hello! \nTo enjoy all of our features, you must be logged in. You can sign up if you do not have an account yet</string>
    <string name="register_instructions">Please fill in your name, email and password</string>

    <!--    msg-->
    <string name="msg_logout">"You have logged out, you are now a guest"</string>
    <string name="msg_logout_failed">"You are not logged in"</string>
    <string name="title_bar_login">Login</string>
    <string name="register">Register</string>
    <string name="msg_needLogin">You must be logged in to add recipes</string>
    <string name="comments">Comments</string>
    <string name="Send">Send</string>

    <!-- Preference Titles -->
    <string name="messages_header">Dark theme</string>
    <string name="Ui">Ui</string>

    <!-- Messages Preferences -->
    <string name="reply_title">Default</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Receive notifications</string>
    <string name="Settings_instructions">please restart the application for changes to take effect</string>
    <string name="language">Language</string>
    <string name="user_properties">User properties</string>
    <string name="resat_pasoword">Resat pasoword</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="save_changes">save changes</string>
    <string name="comment_notif_title">You\'ve got a comment!</string>
    <string name="comment_notif_has_commented">has commented on</string>
    <string name="like_notif_title">You\'ve got a like!</string>
    <string name="like_notif_has_liked">has liked</string>
    <string name="error_fill_name">Please fill in your name</string>
    <string name="error_fill_email">Email Address Must Be Entered</string>
    <string name="error_fill_password">Password Must Be Entered and it has to be at least 6 characters long</string>
    <string name="login_wait">Login… Please wait</string>
    <string name="add_instructions">It\'s time to show off your abilities, share your recipe photo</string>
    <string name="comments_login">Please log in to leave a comment.</string>

</resources>