<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_my_recipes"
        android:orderInCategory="100"
        android:title="@string/My_recipes"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_properties"
        android:orderInCategory="101"
        android:title="@string/user_properties"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="103"
        android:title="@string/Logout"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_twotone_search_24"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_twotone_favorite_48"
        android:title="@string/my_favorites"
        app:showAsAction="always" />


</menu>